ngrx blog feature implementation

--- a/libs/feature-blog/src/lib/post-list/post-list.component.html
+++ b/libs/feature-blog/src/lib/post-list/post-list.component.html
@@ -23,7 +23,7 @@
 
         <mat-card>
             <mat-card-content>
-              <blog-post-view [post]="selectedPost"></blog-post-view>
+              <blog-post-view [post]="selectedPost$ | async"></blog-post-view>
             </mat-card-content>
         </mat-card>
 
